--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
   },
+  "engines": {
+    "node": "10.16.3"
+  },
   "devDependencies": {
     "nodemon": "^2.0.4"
   }
